--- a/firestore-bigquery-export/scripts/import/tsconfig.json
+++ b/firestore-bigquery-export/scripts/import/tsconfig.json
@@ -1,20 +1,13 @@
 {
   "compilerOptions": {
-    "lib": [
-      "es6"
-    ],
+    "lib": ["es6"],
     "module": "commonjs",
     "noImplicitReturns": true,
     "outDir": "lib",
     "sourceMap": false,
-    "target": "es6",
-    "typeRoots": []
+    "target": "es6"
   },
   "compileOnSave": true,
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "**/node_modules/@types/jest/**"
-  ]
+  "include": ["src"],
+  "exclude": ["**/node_modules/@types/jest/**"]
 }
