--- a/firestore-bigquery-export/firestore-bigquery-change-tracker/tsconfig.json
+++ b/firestore-bigquery-export/firestore-bigquery-change-tracker/tsconfig.json
@@ -5,8 +5,7 @@
     "noImplicitReturns": true,
     "outDir": "lib",
     "sourceMap": false,
-    "target": "es6",
-    "typeRoots": []
+    "target": "es6"
   },
   "compileOnSave": true,
   "include": ["src"],
